--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,825 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  height: 100%;
+}
+html {
+  height: 100%;
+  width: 100%;
+}
+.main-screen {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #080808;
+  /* font-family: 'Inter', sans-serif; */
+  font-family: 'IBM Plex Mono';
+  font-size: 1rem;
+}
+
+.floating {
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
+.floating-2 {
+  animation-name: floating-2;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
+
+@keyframes floating-2 {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes bounce {
+  10% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+
+  20% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+
+  30% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+
+  40% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+
+  50% {
+    -webkit-transform: translateX(2px) rotate(1deg);
+    transform: translateX(2px) rotate(1deg);
+  }
+
+  60% {
+    -webkit-transform: translateX(-2px) rotate(-1deg);
+    transform: translateX(-2px) rotate(-1deg);
+  }
+
+  70% {
+    -webkit-transform: translateX(2px) rotate(1deg);
+    transform: translateX(2px) rotate(1deg);
+  }
+
+  80% {
+    -webkit-transform: translateX(-2px) rotate(-1deg);
+    transform: translateX(-2px) rotate(-1deg);
+  }
+
+  90% {
+    -webkit-transform: translateX(1px) rotate(0);
+    transform: translateX(1px) rotate(0);
+  }
+
+  100% {
+    -webkit-transform: translateX(-1px) rotate(0);
+    transform: translateX(-1px) rotate(0);
+  }
+}
+
+@keyframes pop {
+  50% {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+  }
+}
+
+h2:hover {
+  animation: bounce 2s;
+}
+
+.nav-wrapper {
+  height: 12%;
+  width: 100%;
+  position: fixed;
+  z-index: 5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.nav-element {
+  display: flex;
+  align-items: center;
+  margin-left: 3.5%;
+  margin-right: 3.5%;
+}
+
+.nav-element:hover img {
+  filter: invert(67%) sepia(46%) saturate(1814%) hue-rotate(219deg)
+    brightness(102%) contrast(103%);
+}
+
+.active-header h2 {
+  color: #6c63ff;
+}
+
+.active-header img {
+  filter: invert(67%) sepia(46%) saturate(1814%) hue-rotate(219deg)
+    brightness(102%) contrast(103%);
+}
+
+.nav-element:hover h2 {
+  color: #6c63ff;
+}
+.nav-element img {
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.side-nav {
+  height: 12%;
+  width: 90%;
+  position: fixed;
+  background-color: #1B1B1B;
+  color: white;
+  transition: 0.5s ease;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  /* font-weight: 400; */
+}
+
+.side-nav h2 {
+  font-weight: 200;
+  font-size: 1.2rem;
+  letter-spacing: -1px;
+  cursor: pointer;
+}
+
+.side-nav h2:active {
+}
+.side-nav h2:hover {
+  animation: none;
+}
+
+.media-container {
+  /* width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  top: 95%; */
+}
+
+.media-container img:hover {
+  filter: invert(67%) sepia(46%) saturate(1814%) hue-rotate(219deg)
+    brightness(102%) contrast(103%);
+}
+.media-container a {
+  padding: 0 0rem 0 10%;
+  cursor: pointer;
+}
+
+.screen-body {
+  /* margin-left: 20%; */
+  margin-top: 5%;
+  width: 100%;
+  height: 80%;
+  position: relative;
+}
+
+.welcome-container {
+  position: absolute;
+  top: 35%;
+  left: 5%;
+}
+
+.welcome-container p {
+  margin: 0;
+  color: white;
+  font-style: italic;
+}
+.welcome-container h2 {
+  font-size: 3.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: 600;
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: #6C63FF;
+  font-weight: 600;
+  font-size: 1.2rem;
+  border: 2px solid #6C63FF;
+  padding: 1rem;
+  margin-top: 1rem;
+  outline: none;
+}
+
+button:hover {
+  color: white;
+  border: 2px solid white;
+}
+
+.blue-ball {
+  max-width: 12%;
+  position: absolute;
+  left: 15%;
+  top: 5%;
+}
+
+.purple-ball {
+  max-width: 18%;
+  position: absolute;
+  left: 75%;
+  top: 60%;
+}
+
+.pink-ball {
+  max-width: 10%;
+  position: absolute;
+  left: 75%;
+  top: 18%;
+}
+
+.yellow-ball {
+  max-width: 10%;
+  position: absolute;
+  left: 23%;
+  top: 75%;
+}
+
+.blue-ball:hover {
+  animation: bounce 2s;
+}
+.yellow-ball:hover {
+  animation: bounce 1.5s;
+}
+
+.purple-ball:hover {
+  animation: bounce 4s;
+}
+
+.pink-ball:hover {
+  animation: bounce 2.5s;
+}
+.about-container {
+  display: flex;
+  position: absolute;
+  top: 35%;
+  left: 5%;
+}
+
+.about-container h2 {
+  font-size: 3.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: 600;
+}
+
+.about-text {
+  max-width: 50%;
+  margin-right: 2rem;
+}
+
+.about-text p {
+  color: #c7c5c5;
+  font-weight: 400;
+  line-height: 1.6;
+  text-align: left;
+}
+
+.experience-container {
+  position: absolute;
+  top: 35%;
+  left: 5%;
+  display: flex;
+  align-items: center;
+}
+
+.experience-container h2 {
+  font-size: 3.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: 600;
+}
+
+.experience-container p {
+  color: #c7c5c5;
+}
+
+.experience-container p {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  letter-spacing: 3px;
+}
+
+.experience-text-wrapper a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.experience-text-wrapper a:hover {
+  color: #e83e7b;
+}
+.rb-container {
+  margin-left: 6rem;
+  margin-right: 2rem;
+}
+
+.rb-container ul.rb {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+}
+
+.rb-container ul.rb li {
+  list-style: none;
+  margin: auto;
+  min-height: 50px;
+  border-left: 1px dashed #fff;
+  padding: 0 0 50px 30px;
+  position: relative;
+}
+
+.rb-container ul.rb li:last-child {
+  border-left: 0;
+  padding: 0 0 0 30px;
+}
+
+.rb-container ul.rb li::before {
+  position: absolute;
+  left: -10px;
+  top: -5px;
+  content: ' ';
+  border: 8px solid #6c63ff;
+  border-radius: 500%;
+  background: white;
+  height: 20px;
+  width: 20px;
+  transition: all 500ms ease-in-out;
+}
+
+.rb-container ul.rb li:hover::before {
+  border-color: #534f93;
+  transition: all 500ms ease-in-out;
+}
+
+ul.rb li .timestamp {
+  color: #e83e7b;
+  position: relative;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+}
+
+.item-title {
+  color: #c7c5c5;
+  font-style: italic;
+}
+
+.item-title a {
+  text-decoration: none;
+  font: inherit;
+  color: inherit;
+  pointer-events: all;
+}
+
+.item-title a:hover {
+  color: #e83e7b;
+}
+
+.container-3 {
+  width: 5em;
+  vertical-align: right;
+  white-space: nowrap;
+  position: absolute;
+}
+
+.container-3 input#search {
+  width: 150px;
+  height: 30px;
+  background: #fbfbfb;
+  border: none;
+  font-size: 10pt;
+  color: #262626;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin: 0.9em 0 0 28.5em;
+  box-shadow: 3px 3px 15px rgba(119, 119, 119, 0.5);
+}
+
+.container-3 .icon {
+  margin: 1.3em 3em 0 31.5em;
+  position: absolute;
+  width: 150px;
+  height: 30px;
+  color: #4f5b66;
+}
+
+input::placeholder {
+  padding: 5em 5em 1em 1em;
+  color: #6c63ff;
+}
+
+.spinning-planet {
+  max-width: 35%;
+  position: absolute;
+  overflow: hidden;
+  left: 55%;
+  top: 10%;
+  animation: spin 25s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.header-text {
+  font-size: 3.5rem;
+  display: inline-block;
+  margin: 0;
+  font-weight: 600;
+}
+.contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 65%;
+  width: 50%;
+  position: absolute;
+  top: 30%;
+  left: 5%;
+}
+
+.contact-form-container {
+  width: 100%;
+  height: 90%;
+  background-color: #20242e;
+  color: white;
+  border-radius: 10px;
+  /* border-top: 3px solid #4f5b66; */
+  /* border-right: 3px solid #4f5b66; */
+  /* border-left: 3px solid #4f5b66; */
+  /* border-bottom: 3px solid #4f5b66; */
+  
+}
+
+.contact-form-container form {
+  position: relative;
+  top: 10%;
+  height: 100%;
+}
+
+.contact-form-container p {
+  margin-left: 5%;
+  display: inline-block;
+}
+
+textarea {
+  margin-left: 5%;
+  width: 90%;
+  outline: none;
+  background-color: #31343c;
+  color: #c7c5c5;
+  border: none;
+  height: 10%;
+  resize: none;
+  transition: border-bottom 0.2s linear;
+}
+
+textarea::placeholder {
+  padding-left: 1rem !important;
+  /* padding-top: 0.5rem !important; */
+}
+
+textarea:focus {
+  border-bottom: 2px solid #6C63FF;
+}
+.message-area {
+  height: 35%;
+}
+
+.single-project-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 4% 0 4% 0;
+}
+.single-project-container h3 {
+  font-size: 2rem;
+  width: 100%;
+  color: #c7c5c5;
+  text-align: left;
+  margin: 0.6rem 0 0.6rem 0;
+}
+.single-project-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.single-project-text p {
+  background-color: #262626;
+  padding: 1.5rem;
+  margin-left: 1rem;
+  border-radius: 5px;
+  color: #c7c5c5;
+  font-size: 0.9rem;
+  font-weight: 500;
+  position: relative;
+}
+
+.single-project-text span {
+  color: #c7c5c5;
+  font-size: 0.9rem;
+  font-weight: 500;
+  display: block;
+  text-align: right;
+  padding-top: 0.2rem;
+  padding-right: 0.1rem;
+}
+
+.skills-container {
+  width: 100%;
+}
+
+.skills-container span{
+  color: #c7c5c5;
+  font-size: 0.9rem;
+  font-weight: 500;
+  display: block;
+  text-align: right;
+  padding-top: 0.2rem;
+  padding-right: 0.1rem;
+}
+
+.icon-container {
+  margin-top: 0.4rem;
+  display: flex;
+  justify-content: flex-end;
+}
+.icon-container img {
+  width: 24px;
+  margin: 0 0.4rem 0 0.4rem;
+  opacity: 0.9;
+}
+
+.filter:hover {
+  filter: invert(67%) sepia(46%) saturate(1814%) hue-rotate(219deg)
+    brightness(102%) contrast(103%);
+  opacity: 1;
+}
+
+.thumb-img {
+  max-width: 100%;
+  height: fit-content;
+  border-radius: 5px;
+  object-fit: contain;
+}
+
+.project-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-top: 5%;
+  padding-bottom: 10%;
+}
+
+@media (max-width: 1500px) {
+  .single-project-container img {
+    max-width: 50%;
+  }
+  .single-project-text {
+    min-width: 50%;
+  }
+}
+@media (max-width: 1165px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1032px) {
+  .screen-body {
+    margin-left: 10%;
+  }
+  .nav-wrapper {
+    width: 50px;
+  }
+
+  .nav-element img {
+    margin: 5%;
+  }
+  .side-nav {
+    width: 50px;
+  }
+  .side-nav h2 {
+    display: none;
+  }
+  .nav-element {
+    margin-left: 10%;
+  }
+  .media-container {
+    flex-direction: column;
+    top: 85%;
+  }
+  .media-container a {
+    padding: 0;
+  }
+
+  .about-container {
+    font-size: 16px;
+  }
+
+  .about-text {
+    max-width: 100%;
+  }
+  .spinning-planet {
+    display: none;
+  }
+
+  .contact-wrapper {
+    width: 75%;
+  }
+
+  .single-project-container {
+    flex-direction: column;
+  }
+
+  .single-project-container img {
+    max-width: 85%;
+  }
+  @media (max-width: 700px) {
+    html {
+      font-size: 13px;
+    }
+
+    .about-container {
+      font-size: 14px;
+    }
+  }
+  .contact-form-container {
+    background-color: transparent;
+    border: none;
+  }
+
+  .contact-form-container p {
+    display: block;
+    margin: 0;
+  }
+  .contact-wrapper button {
+    margin-left: 0;
+    float: none !important;
+  }
+  textarea {
+    padding: 0;
+    margin: 0;
+  }
+
+  @media (max-width: 650px) {
+    html {
+      font-size: 12px;
+    }
+    .about-container {
+      font-size: 14px;
+    }
+
+    .contact-wrapper {
+      width: 90%;
+    }
+    textarea {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 12px;
+  }
+  .welcome-container {
+    top: 25%;
+    left: 7.5%;
+  }
+  .about-container {
+    top: 25%;
+    left: 7.5%;
+  }
+  .contact-wrapper {
+    top: 25%;
+    left: 7.5%;
+  }
+
+  .experience-container {
+    top: 5%;
+    left: 7.5%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .rb-container {
+    margin-left: 0;
+    margin-top: 4rem;
+  }
+
+  .rb-container ul.rb li {
+    padding: 0 0 20px 30px;
+  }
+}
+
+@media (max-width: 385px) {
+  html {
+    font-size: 10px;
+  }
+  .yellow-ball {
+    display: none;
+  }
+  .blue-ball {
+    display: none;
+  }
+  .purple-ball {
+    display: none;
+  }
+  .pink-ball {
+    display: none;
+  }
+
+  .rb-container {
+    margin-left: 1rem;
+  }
+
+  .media-container {
+    top: 75%;
+  }
+  .project-container .media-container {
+    top: 60%;
+  }
 }
