--- a/src/index.css
+++ b/src/index.css
@@ -238,9 +238,9 @@ h2:hover {
 
 .screen-body {
   /* margin-left: 20%; */
-  margin-top: 5%;
+  /* margin-top: 5%; */
   width: 100%;
-  height: 80%;
+  height: 100%;
   position: relative;
 }
 
@@ -272,7 +272,7 @@ button {
   font-size: 1.2rem;
   border: 2px solid #6C63FF;
   padding: 1rem;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   outline: none;
 }
 
@@ -654,7 +654,7 @@ textarea:focus {
   padding-bottom: 10%;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 2000px) {
   .single-project-container img {
     max-width: 50%;
   }
@@ -827,7 +827,10 @@ textarea:focus {
 
 .wrap {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
   height: 100%;
 }
 
@@ -849,9 +852,12 @@ footer {
 .game-wrapper {
   flex: 1;
   display: flex;
+  margin-left: 2rem;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #222;
+  max-width: 400px;
+  background: #080808;
 }
 .game {
   width: 400px;
@@ -860,6 +866,53 @@ footer {
   animation: scroll-background 5s linear infinite;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+}
+
+.mint-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #20242e;
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.mint-container h2 {
+  font-size: 3.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: 600;
+  color: white;
+}
+
+.game-instructions {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  height: 450px;
+  margin-left: 5rem;
+  /* background-color: blue; */
+}
+
+.game-instructions h2 {
+  font-size: 3.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: 600;
+}
+
+/* .about-text {
+  max-width: 50%;
+  margin-right: 2rem;
+} */
+
+.game-instructions p {
+  color: #c7c5c5;
+  font-weight: 400;
+  line-height: 1.6;
+  text-align: left;
 }
 
 @keyframes scroll-background {
@@ -934,14 +987,7 @@ footer {
 
 
 .player-address {
-  /* display: block; */
-  position: absolute;
   color: white;
-  /* z-index: 5; */
-  /* left: 350px; */
-  /* top: 50px; */
-  align-self: flex-end;
-  justify-self: flex-start;
 }
 
 .btn {
