--- a/src/index.css
+++ b/src/index.css
@@ -862,8 +862,10 @@ textarea:focus {
     float: none !important;
   }
   textarea {
-    padding: 0;
+    /* padding: 0; */
     margin: 0;
+    padding-left: 1rem !important;
+    padding-top: 1rem;
   }
 
   @media (max-width: 650px) {
@@ -1224,6 +1226,19 @@ footer {
   animation: pop-in 1s;
 }
 
+.play-on-desktop {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  background: #1B1B1B;
+  color: #6C63FF;
+  padding: 20px 50px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  text-align: center;
+  animation: pop-in 1s;
+}
+
 .game-over {
   display: none;
   position: absolute;
@@ -1329,6 +1344,14 @@ footer {
     margin: 0;
     flex-wrap: nowrap;
     flex-direction: column;
+  }
+
+  .play-on-desktop {
+    display: flex;
+  }
+
+  .game-start {
+    display: none;
   }
 }
 
