--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,15 @@ body {
   margin-top: 5px;
 }
 
+.floating-3 {
+  animation-name: floating-3;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
 @keyframes floating {
   0% {
     transform: translate(0, 0px);
@@ -67,6 +76,17 @@ body {
 }
 
 @keyframes floating-2 {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
+@keyframes floating-3 {
   0% {
     transform: translate(0, 0px);
   }
